syntax = "proto3";

package telemetry.event;

option java_package = "ru.yandex.practicum.grpc.telemetry.event";
option java_multiple_files = true;

import "telemetry/event/scenario.proto";

message ScenarioAddedEventProto {
  string id = 1;
  string name = 2;
  repeated ScenarioConditionProto conditions = 3;
  repeated DeviceActionProto actions = 4;
}